--- a/dev/com.ibm.ws.concurrent_fat_work/.classpath
+++ b/dev/com.ibm.ws.concurrent_fat_work/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="src" path="fat/src"/>
 	<classpathentry kind="src" path="test-applications/WorkTestApp/src"/>
+	<classpathentry kind="src" path="test-applications/WorkTestCDIApp/src"/>
 	<classpathentry kind="src" path="test-bundles/workMgrProvider/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
