--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -309,7 +309,7 @@
     <dependency>
       <groupId>com.sun.activation</groupId>
       <artifactId>jakarta.activation</artifactId>
-      <version>2.0.0-RC3</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.sun.faces</groupId>
@@ -689,7 +689,7 @@
     <dependency>
       <groupId>jakarta.activation</groupId>
       <artifactId>jakarta.activation-api</artifactId>
-      <version>2.0.0-RC3</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>jakarta.annotation</groupId>
