--- a/dev/com.ibm.ws.security.jwt_fat.builder/build.gradle
+++ b/dev/com.ibm.ws.security.jwt_fat.builder/build.gradle
@@ -40,6 +40,8 @@ dependencies {
       
 }
 
+addRequiredLibraries.dependsOn addJakartaTransformer
+
 /*
  * This is where all application ZIP and WARs will be built.
  */
