--- a/dev/wlp-jakartaee-transform/rules/jakarta-bundles.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-bundles.properties
@@ -19,3 +19,6 @@ com.ibm.ws.security.auth.data=io.openliberty.security.auth.internal.data,,"Secur
 com.ibm.websphere.appserver.api.authData=io.openliberty.authData,,"Security Auth Data","Security Auth Data; Jakarta Enabled"
 com.ibm.ws.jca.inbound.security=io.openliberty.connectors.security.internal.inbound,,"Jakarta connectors inbound security","Jakarta connectors inbound security"
 com.ibm.ws.security.sso=io.openliberty.security.sso.internal,,"Security Single Sign-On","Security Single Sign-on"
+com.ibm.ws.security.jwt=io.openliberty.security.jwt.internal,,"Liberty Security JWT Builder and Consumer","Liberty Security JWT Builder and Consumer; Jakarta Enabled"
+com.ibm.ws.security.common=io.openliberty.security.common.internal,,"Security Common","Common code for security bundles; Jakarta Enabled"
+com.ibm.websphere.appserver.api.jwt=io.openliberty.jwt,,"Liberty Security JWT Builder And Token API","Liberty Security JWT Builder And Token API; Jakarta Enabled"
