--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -729,7 +729,7 @@
     <dependency>
       <groupId>jakarta.jms</groupId>
       <artifactId>jakarta.jms-api</artifactId>
-      <version>3.0.0-RC1</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>jakarta.json.bind</groupId>
