--- a/dev/cnf/resources/bnd/liberty-release.props
+++ b/dev/cnf/resources/bnd/liberty-release.props
@@ -11,13 +11,13 @@
 
 releaseTypeGA=true
 
-libertyBaseVersion=20.0.0
-libertyFixpackVersion=12
+libertyBaseVersion=21.0.0
+libertyFixpackVersion=1
 libertyServiceVersion=${libertyBaseVersion}.${libertyFixpackVersion}
-libertyBetaVersion=2020.12.0.0
+libertyBetaVersion=2021.1.0.0
 libertyRelease=${if;${releaseTypeGA};${libertyServiceVersion};${libertyBetaVersion}}
 
-libertyBundleMicroVersion=47
+libertyBundleMicroVersion=48
 copyrightBuildYear=2020
 buildID=${libertyRelease}-${buildLabel}
 productEdition=BASE_ILAN
