--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -714,12 +714,12 @@
     <dependency>
       <groupId>jakarta.enterprise</groupId>
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.0-M4</version>
     </dependency>
     <dependency>
       <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
-      <version>2.0.0</version>
+      <version>2.0.0-RC4</version>
     </dependency>
     <dependency>
       <groupId>jakarta.interceptor</groupId>
@@ -2264,7 +2264,7 @@
     <dependency>
       <groupId>org.jboss.weld.se</groupId>
       <artifactId>weld-se-core</artifactId>
-      <version>4.0.0.Beta5</version>
+      <version>4.0.0.Alpha3</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.weld</groupId>
@@ -2279,7 +2279,7 @@
     <dependency>
       <groupId>org.jboss.weld</groupId>
       <artifactId>weld-osgi-bundle</artifactId>
-      <version>4.0.0.Beta5</version>
+      <version>4.0.0.Alpha3</version>
     </dependency>
     <dependency>
       <groupId>org.jboss</groupId>
