--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -45,12 +45,15 @@ io.openliberty.org.jboss.resteasy.servlet.initializer.xml=jakarta-restfulWS.prop
 io.openliberty.org.jboss.resteasy.common.component.LibertyResteasyCdiExtension.xml=jakarta-restfulWS.properties
 io.openliberty.restfulWS30.jsonb20provider.ResourceProvider.xml=jakarta-restfulWS.properties
 io.openliberty.org.jboss.resteasy.jaxb.provider.ResourceProvider.xml=jakarta-restfulWS.properties
-# Messaging
+# Messaging (metatype)
 com.ibm.ws.jca.processor.jms.service.JMSDestinationResourceFactoryBuilder.xml=jakarta-messaging.properties
 com.ibm.ws.jca.processor.jms.service.JMSConnectionFactoryResourceBuilder.xml=jakarta-messaging.properties
 metatype.xml=jakarta-messaging-metatype.properties
 SharedSubscriptionDurClient.xml=jakarta-messaging-metatype.properties
 SharedSubscriptionNonDurClient.xml=jakarta-messaging-metatype.properties
+# Messaging (server configuration)
+DelayClient_TopicMDB_TCP.xml=jakarta-messaging.properties
+DelayClient_TopicMDB_Bindings.xml=jakarta-messaging.properties
 # Connectors
 com.ibm.ws.jca.activationSpec.supertype.xml=jakarta-resource.properties
 com.ibm.ws.jca.adminObject.supertype.xml=jakarta-resource.properties
@@ -70,9 +73,4 @@ faces-config1.xml=jakarta-faces-config.properties
 com.ibm.ws.security.inflow.context.provider.xml=jakarta-connectors.properties
 com.ibm.ws.jca17.processor.service.ConnectionFactoryResourceBuilder.xml=jakarta-resource.properties
 com.ibm.ws.security.javaeesec.cdi.extensions.JavaEESecCDIExtension.xml=jakarta-xml-securityEnterprise.properties
-#messaging
-# These server configurations contain activation specifications,
-# which contain a destination type which is a JMS class reference.
-# For example, 'destinationType="javax.jms.Topic"'
-DelayClient_TopicMDB_TCP.xml=jakarta-messaging-metatype.properties
-DelayClient_TopicMDB_Bindings.xml=jakarta-messaging-metatype.properties
+
