--- a/dev/com.ibm.ws.kernel.feature_fat/.classpath
+++ b/dev/com.ibm.ws.kernel.feature_fat/.classpath
@@ -10,8 +10,14 @@
 	<classpathentry kind="src" path="test-applications/test.feature.api.client.war/src"/>
 	<classpathentry kind="src" path="test-applications/ServletTest/src"/>
 	<classpathentry kind="src" path="test-applications/IgnoreAPI.ear/IgnoreAPIEJB.jar/src"/>
+	<classpathentry kind="src" path="test-bundles/test.override.requires.javax.swing.plaf/src"/>
+	<classpathentry kind="src" path="test-bundles/test.override.provides.javax.swing.plaf/src"/>
 	<classpathentry kind="src" output="bin" path="fat/src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
