--- a/dev/io.openliberty.wsoc.internal_fat/test-applications/secure.war/resources/WEB-INF/web.xml
+++ b/dev/io.openliberty.wsoc.internal_fat/test-applications/secure.war/resources/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright (c) 2014 IBM Corporation and others.
+    Copyright (c) 2014, 2020 IBM Corporation and others.
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
@@ -13,8 +13,9 @@
 	 <display-name>SecureWeb</display-name>
 	 
 	<servlet>
-        <servlet-name>SingleRequestTestRunner</servlet-name>
- 	   <servlet-class>io.openliberty.wsoc.common.SingleRequestClientTestRunner</servlet-class>
+		<servlet-name>SingleRequestTestRunner</servlet-name>
+		<servlet-class>io.openliberty.wsoc.common.SingleRequestClientTestRunner</servlet-class>
+		<load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
