--- a/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
@@ -14,11 +14,18 @@
 
     <groupId>com.ibm.ws.microprofile.rest.client</groupId>
     <artifactId>tck.runner.tck</artifactId>
-    <version>1.4</version>
+    <version>2.0</version>
     <name>MicroProfile RestClient 2.0 TCK Runner TCK Module</name>
 
+	<repositories>
+		<repository>
+			<id>ossrepo</id>
+			<url>https://oss.sonatype.org/content/repositories/orgeclipsemicroprofile-1385/</url>
+		</repository>
+	</repositories>
+
     <properties>
-        <microprofile.rest.client.version>2.0-RC2</microprofile.rest.client.version>
+        <microprofile.rest.client.version>2.0</microprofile.rest.client.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
