--- a/dev/com.ibm.ws.jaxws.2.2.webcontainer_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxws.2.2.webcontainer_fat/build.gradle
@@ -96,3 +96,6 @@ task addRestConnector(type: Copy) {
 addRequiredLibraries {
   dependsOn addCXF, addSpring, addPureCXF, addRestConnector
 }
+
+addRequiredLibraries.dependsOn addJakartaTransformer
+
