--- a/dev/com.ibm.ws.security.mp.jwt.1.2_fat/build.gradle
+++ b/dev/com.ibm.ws.security.mp.jwt.1.2_fat/build.gradle
@@ -12,7 +12,7 @@ apply from: '../wlp-gradle/subprojects/fat.gradle'
 
 dependencies {
   requiredLibs project(':com.ibm.ws.security.fat.common.jwt'),
-  		project(':com.ibm.ws.security.mp.jwt.1.1_fat'),
+  		project(':com.ibm.ws.security.fat.common.mp.jwt'),
 		project(':com.ibm.ws.org.jose4j'),
       'commons-logging:commons-logging:1.1.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
@@ -51,20 +51,11 @@ dependencies {
 }
 */
 
-def serversFrom12 = [
+def servers = [
 	'com.ibm.ws.security.mp.jwt.1.2.fat',
 	'com.ibm.ws.security.mp.jwt.1.2.fat.jvmOptions',
 	'com.ibm.ws.security.mp.jwt.1.2.fat.builder'
 	]
-
-def serversFrom11 = [
-	'com.ibm.ws.security.mp.jwt.1.1.fat',
-	'com.ibm.ws.security.mp.jwt.1.1.fat.client',
-	'com.ibm.ws.security.mp.jwt.1.1.fat.jvmOptions',
-	'com.ibm.ws.security.mp.jwt.1.1.fat.builder'
-	]
-	
-def servers= serversFrom11 + serversFrom12
 	
 task copyServerFiles_sharedConfig { 
  doLast {
@@ -74,9 +65,8 @@ task copyServerFiles_sharedConfig {
       from project(':com.ibm.ws.security.fat.common').file('publish/shared/config')
       into new File(autoFvtDir, 'publish/shared/config')
     }
-    /* copy the mpJwt-1.1 fat test servers to the current project so we can run the 1.1 tests with the 1.2 feature enabled */
    copy {
-      from project(':com.ibm.ws.security.mp.jwt.1.1_fat').file('publish')
+      from project(':com.ibm.ws.security.fat.common.mp.jwt').file('publish')
       into new File(autoFvtDir, 'publish')
       /* eachFile { println it.name } */
     }
@@ -99,9 +89,9 @@ task copyServerFiles_sharedConfig {
      into new File(autoFvtDir, 'publish/servers/' + server + '/')
     }
  
-   	/* copy shared key/trust stores from the mpjwt 1.1 project */
+   	/* copy shared key/trust stores from the common mp.jwt project */
     copy { 
-     from project(':com.ibm.ws.security.mp.jwt.1.1_fat').file('publish/shared/securityKeys')
+     from project(':com.ibm.ws.security.fat.common.mp.jwt').file('publish/shared/securityKeys')
      into new File(autoFvtDir, 'publish/servers/' + server + '/')
     }
   
@@ -124,23 +114,9 @@ task copyServerFiles_sharedConfig {
   }
   }
  }
- 
- task copy11TesBinaries {
-  dependsOn ':com.ibm.ws.security.mp.jwt.1.1_fat:autoFVT'
-  doLast {
-  
-     /*
-     * Copy test application binaries.
-     */
-   copy {
-      from(zipTree(new File(project(':com.ibm.ws.security.mp.jwt.1.1_fat').buildDir, 'com.ibm.ws.security.mp.jwt.1.1_fat.jar')))      
-      into new File(autoFvtDir, 'build/classes')
-   }
- }
- }
- 
+
  task copyServerFiles { 
- dependsOn ':com.ibm.ws.security.mp.jwt.1.1_fat:autoFVT'
+  dependsOn ':com.ibm.ws.security.fat.common.mp.jwt:autoFVT'
  doLast {
 
   servers.each { server ->
@@ -158,14 +134,9 @@ task copyServerFiles_sharedConfig {
       from new File(project(':com.ibm.ws.security.fat.common.jwt').buildDir, 'test-application/jwtbuilder.war')
       into new File(autoFvtDir, 'publish/servers/com.ibm.ws.security.mp.jwt.1.2.fat.builder/apps')
     }
-    
-    copy { 
-      from new File(project(':com.ibm.ws.security.fat.common.jwt').buildDir, 'test-application/jwtbuilder.war')
-      into new File(autoFvtDir, 'publish/servers/com.ibm.ws.security.mp.jwt.1.1.fat.builder/apps')
-    }
- 
+     
     copy {
-      from new File(project(':com.ibm.ws.security.mp.jwt.1.1_fat').buildDir, 'autoFVT/test-applications')
+      from new File(project(':com.ibm.ws.security.fat.common.mp.jwt').buildDir, 'autoFVT/test-applications')
       into new File(autoFvtDir, 'test-applications') ;
     }
     
@@ -185,5 +156,5 @@ task copyServerFiles_sharedConfig {
   }
 }
 
-autoFVT.dependsOn copyServerFiles_sharedConfig, copyServerFiles_keyAndTrust, copyServerFiles, copy11TesBinaries 
+autoFVT.dependsOn copyServerFiles_sharedConfig, copyServerFiles_keyAndTrust, copyServerFiles 
 
