--- a/dev/com.ibm.ws.jdbc_fat_oracle/build.gradle
+++ b/dev/com.ibm.ws.jdbc_fat_oracle/build.gradle
@@ -15,17 +15,18 @@ configurations {
 }
 
 dependencies {
-  requiredLibs 'org.testcontainers:testcontainers:1.14.0',
-               'org.testcontainers:database-commons:1.14.0',
-               'org.testcontainers:oracle-xe:1.14.0',
-               'org.testcontainers:jdbc:1.14.0',
+  requiredLibs 'org.testcontainers:testcontainers:1.15.0',
+               'org.testcontainers:database-commons:1.15.0',
+               'org.testcontainers:oracle-xe:1.15.0',
+               'org.testcontainers:jdbc:1.15.0',
                'org.apache.commons:commons-compress:1.19',
                'org.rnorth.duct-tape:duct-tape:1.0.7',
                'org.rnorth.visible-assertions:visible-assertions:2.1.2',
                'org.rnorth:tcp-unix-socket-proxy:1.0.2',
                'net.java.dev.jna:jna:5.2.0',
                'org.slf4j:slf4j-api:1.7.7',
-               'org.slf4j:slf4j-jdk14:1.7.7'
+               'org.slf4j:slf4j-jdk14:1.7.7',
+               'com.github.docker-java:docker-java-api:3.2.6'
   oracle 'com.oracle.ojdbc:ojdbc8_g:19.3.0.0'
   ucp 'com.oracle.ojdbc:ucp:19.3.0.0'
 }
