--- a/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
@@ -17,8 +17,18 @@
     <version>2.0</version>
     <name>MicroProfile RestClient 2.0 TCK Runner TCK Module</name>
 
+    <repositories>
+    	<repository>
+    		<id>ibmdhe</id>
+    		<name>IBM_DHE File Server</name>
+    		<url>http://public.dhe.ibm.com/ibmdl/export/pub/software/olrepo</url>
+    		<releases><enabled>true</enabled><updatePolicy>always</updatePolicy></releases>
+            <snapshots><enabled>true</enabled><updatePolicy>always</updatePolicy></snapshots>
+    	</repository>
+    </repositories>
+
     <properties>
-        <microprofile.rest.client.version>2.0</microprofile.rest.client.version>
+        <microprofile.rest.client.version>2.0.1-20210208</microprofile.rest.client.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
