--- a/dev/com.ibm.ws.security.saml.sso_fat.jaxrs/gradle.properties
+++ b/dev/com.ibm.ws.security.saml.sso_fat.jaxrs/gradle.properties
@@ -8,8 +8,8 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-sp_serverName=com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.rs
-rs_serverName=com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.sp
+rs_serverName=com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.rs
+sp_serverName=com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.sp
 merged_sp_rs_serverName=com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.merged_sp_rs
 helloworldWar=true
 jaxrsclientWar=true
