--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -238,6 +238,11 @@
     </dependency>
     <dependency>
       <groupId>com.oracle.ojdbc</groupId>
+      <artifactId>oraclepki</artifactId>
+      <version>19.3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.ojdbc</groupId>
       <artifactId>ucp</artifactId>
       <version>19.3.0.0</version>
     </dependency>
