--- a/dev/com.ibm.ws.security.jwtsso_fat/build.gradle
+++ b/dev/com.ibm.ws.security.jwtsso_fat/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2018,2020 IBM Corporation and others.
+ * Copyright (c) 2018,2021 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -12,6 +12,7 @@ apply from: '../wlp-gradle/subprojects/fat.gradle'
 
 dependencies {
   requiredLibs project(':com.ibm.ws.security.fat.common'),
+  	  project(':com.ibm.ws.security.fat.common.jwt'),
       'commons-logging:commons-logging:1.1.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
       'net.sourceforge.htmlunit:htmlunit:2.44.0',
@@ -78,15 +79,33 @@ assemble {
   dependsOn amrbuilder
 }
 
-autoFVT.dependsOn ':com.ibm.ws.security.fat.common:assemble'
+task copyServerFiles_sharedConfig { 
+ doLast {
+ 
+ /** copy common config files (like ssl config definitions)  We will override with project specific later **/
+   copy {
+      from project(':com.ibm.ws.security.fat.common').file('publish/shared/config')
+      into new File(autoFvtDir, 'publish/shared/config')
+      include '**/allAlgSSLSettings.xml'
+   }
+  }
+ }
 
+autoFVT.dependsOn ':com.ibm.ws.security.fat.common:assemble', copyServerFiles_sharedConfig
+ 
 autoFVT.doLast {
-
+  
   def servers = [
 	'com.ibm.ws.security.jwtsso.fat'
   ]
 
   servers.each { server ->
+  
+    copy { 
+     from project(':com.ibm.ws.security.fat.common').file('publish/shared/securityKeys')
+     into new File(autoFvtDir, 'publish/servers/' + server + '/')
+     include '**/allAlg*.p12'
+    }
     copy { 
       from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
       into new File(autoFvtDir, 'publish/servers/' + server + '/dropins')
