--- a/dev/com.ibm.ws.microprofile.rest.client14_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.microprofile.rest.client14_fat_tck/publish/tckRunner/tck/pom.xml
@@ -18,7 +18,7 @@
     <name>MicroProfile RestClient 1.4 TCK Runner TCK Module</name>
 
     <properties>
-        <microprofile.rest.client.version>1.4-RC2</microprofile.rest.client.version>
+        <microprofile.rest.client.version>1.4.2-20210215</microprofile.rest.client.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
